# hacs-storz-bickel

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .yamllint.yml  AGENTS.md  CHANGELOG.md  DEPENDENCIES.md  LICENSE  NOTICE  README.md  TODO.md  hacs.json  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/instructions/: blueprint.manifest.instructions.md
.github/workflows/: ci.yml  ha-version-sync-check.yml
card/: package.json
card/src/: const.ts  dial.ts  entities.ts  storz-bickel-card.ts  styles.ts  types.ts
card/test/: card.test.ts  editor.test.ts  entities.test.ts  fixtures.ts
config/: configuration.yaml
custom_components/storz_bickel/: __init__.py  config_flow.py  const.py  data.py  diagnostics.py  manifest.json
custom_components/storz_bickel/api/: __init__.py  const.py  discovery.py  exceptions.py  models.py
custom_components/storz_bickel/api/devices/: __init__.py  base.py  crafty.py  venty_veazy.py  volcano.py
custom_components/storz_bickel/binary_sensor/: __init__.py
custom_components/storz_bickel/button/: __init__.py
custom_components/storz_bickel/climate/: __init__.py
custom_components/storz_bickel/config_flow_handler/: __init__.py  config_flow.py  options_flow.py
custom_components/storz_bickel/coordinator/: __init__.py  base.py  pump_guard.py
custom_components/storz_bickel/entity/: __init__.py  base.py
custom_components/storz_bickel/number/: __init__.py
custom_components/storz_bickel/sensor/: __init__.py
custom_components/storz_bickel/session/: __init__.py  entities.py  models.py  store.py  tracker.py
custom_components/storz_bickel/switch/: __init__.py
custom_components/storz_bickel/translations/: de.json  en.json
custom_components/storz_bickel/workflow/: __init__.py  definitions.py  runner.py  steps.py
custom_components/storz_bickel/www/: storz-bickel-card.js
docs/: README.md
docs/development/: ARCHITECTURE.md  CARD.md  CODESPACES.md  CUSTOMIZATION.md  DECISIONS.md  RELEASE.md
docs/user/: CONFIGURATION.md  EXAMPLES.md  GETTING_STARTED.md
script/: card  card-check  card-lint  card-lint-check  card-test  card-type-check  check  clean  ha-version-sync  lint  lint-check  lock-check  python  python-check  smoke  spell  spell-check  test  test-live  type-check  uv-sync  yaml-check
script/.lib/: card.sh  output.sh
script/setup/: bootstrap
tests/: conftest.py  live_ble.py  test_card.py  test_climate.py  test_config_flow.py  test_connect.py  test_fahrenheit_switch.py  test_init.py  test_live_ble.py  test_number.py  test_options_flow.py  test_protocol.py  test_session_sensors.py  test_session_tracker.py  test_switch.py  test_translations.py  test_workflow.py
